Fix tooltip hiding behind Active/Blended panels.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -87,7 +87,6 @@ object, embed, video, iframe {
             position: relative;
             top: 0;
             width: 640px;
-            z-index: 1;
 
             div.mejs-inner {
                 height: 385px;
@@ -104,7 +103,7 @@ object, embed, video, iframe {
                         padding-top: 0;
                         position: absolute;
                         width: 640px;
-                        z-index: 10;
+                        z-index: 200;
 
                         span.mejs-time-total {
                             @include border-radius(1px, 1px);
@@ -126,7 +125,6 @@ object, embed, video, iframe {
                                 height: 15px;
                                 top: -24px;
                                 width: 34px;
-                                z-index: 300;
 
                                 .mejs-time-float-current {
                                     font-family: 'proxima-nova';
